Add syslog drain count per app to build settings task
Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/tasks/capacity-planning/build-settings.yml
+++ b/tasks/capacity-planning/build-settings.yml
@@ -8,8 +8,8 @@ inputs:
 outputs:
 - name: deployment-settings
 params:
-  ADAPTER_COUNT:
   ADAPTER_COLLOCATED: false
+  ADAPTER_COUNT:
   API_VERSION:
   CLIENT_ID:
   DIEGO_CELL_COUNT:
@@ -27,6 +27,7 @@ params:
   START_RPS:
   STEPS:
   SYSLOG_COUNTER_COUNT:
+  SYSLOG_DRAIN_COUNT_PER_APP: 1
   SYSLOG_SERVICE_NAME:
   SYSLOG_SERVICE_URL:
   SYSTEM_DOMAIN:
