--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -421,26 +421,13 @@ jobs:
       params:
         SCRIPT: scripts/test integration
   - task: commit
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: loggregator/base
-      inputs:
-        - name: synced-loggregator-release
-      outputs:
-        - name: committed-loggregator-release
-      params:
-        SOURCE: synced-loggregator-release
-        PATHS: "src/code.cloudfoundry.org/loggregator packages"
-        COMMIT_MESSAGE: "Bump code.cloudfoundry.org/loggregator"
-        OUTPUT: committed-loggregator-release
-      run:
-        path: bash
-        args:
-        - -c
-        - {{commit}}
+    file: loggregator-ci/tasks/commit-with-shortlog/task.yml
+    input_mapping:
+      release-repo: synced-loggregator-release
+    output_mapping:
+      committed-repo: committed-loggregator-release
+    params:
+      PATHS: "src/code.cloudfoundry.org/loggregator packages"
   - put: loggregator-release-updated
     params:
       repository: committed-loggregator-release
