Update path to commit with shortlog task
Signed-off-by: Eno Compton <ecompton@pivotal.io>

--- a/tasks/commit-with-shortlog/task.yml
+++ b/tasks/commit-with-shortlog/task.yml
@@ -15,7 +15,7 @@ outputs:
 - name: committed-repo
 
 run:
-  path: loggregator-ci/tasks/commit-with-shortlog/task
+  path: ../loggregator-ci/tasks/commit-with-shortlog/task
   dir: commited-repo
 
 params:
