Fix path to working dir in commit with shortlog
Signed-off-by: Brady Love <blove@pivotal.io>

--- a/tasks/commit-with-shortlog/task.yml
+++ b/tasks/commit-with-shortlog/task.yml
@@ -16,7 +16,7 @@ outputs:
 
 run:
   path: ../loggregator-ci/tasks/commit-with-shortlog/task
-  dir: commited-repo
+  dir: committed-repo
 
 params:
   # Required. The paths to commit.
